--- a/Painting/Base.lproj/Main.storyboard
+++ b/Painting/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     <constraint firstAttribute="width" constant="48" id="b5x-ss-4ht"/>
                                     <constraint firstAttribute="height" constant="48" id="vbl-lG-wHQ"/>
                                 </constraints>
-                                <state key="normal" backgroundImage="ic_color_lens_48pt"/>
+                                <state key="normal" backgroundImage="colorIcon"/>
                                 <connections>
                                     <action selector="colorPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KUC-RU-V5K"/>
                                 </connections>
@@ -40,7 +40,7 @@
                                     <constraint firstAttribute="height" constant="48" id="1aZ-jn-oax"/>
                                     <constraint firstAttribute="width" constant="48" id="N9O-EC-lUN"/>
                                 </constraints>
-                                <state key="normal" backgroundImage="ic_brush_48pt"/>
+                                <state key="normal" backgroundImage="brushIcon"/>
                                 <connections>
                                     <action selector="sizePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="D5V-IO-sSm"/>
                                 </connections>
@@ -60,7 +60,7 @@
                                     <constraint firstAttribute="width" constant="48" id="Kwe-ed-DyC"/>
                                     <constraint firstAttribute="height" constant="48" id="ho9-9Y-45n"/>
                                 </constraints>
-                                <state key="normal" backgroundImage="ic_redo_48pt"/>
+                                <state key="normal" backgroundImage="clearIcon"/>
                                 <connections>
                                     <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HOs-7M-nlE"/>
                                 </connections>
@@ -136,9 +136,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="brushIcon" width="100" height="100"/>
+        <image name="clearIcon" width="100" height="100"/>
+        <image name="colorIcon" width="100" height="100"/>
         <image name="eraser-2" width="606" height="244"/>
-        <image name="ic_brush_48pt" width="48" height="48"/>
-        <image name="ic_color_lens_48pt" width="48" height="48"/>
-        <image name="ic_redo_48pt" width="48" height="48"/>
     </resources>
 </document>
